	* binary_file_cache.c: Correct some warnings from sort and search comparisons.
	  Add a function to initialize the global values.
	* search.c: Implement the check of the cache.
	* main.c: Call the initialization of the cache and set up for cleanup at termination.
	  Set up loading and saving of the cache file.
	* binary_file_cache.h: Add prototype for cache initialization.

2016-06-03  SilverNexus
	* search.c: Remove unecessary variable in parse_file().
	* load_binary_file_cache.c: Implement writing of cache to file.
	* load_binary_file_cache.c -> binary_file_cache.c
	* binary_file_cache.c: Polish the implementation to match use of header file.
	  Add function to link new detected files into the DIR_LIST for them.
	  Add function to search the cache for a given path.
	* binary_file_cache.h: Make the binary cache function accessible outside the source file.
	  Add declaration for adding newly detected binary files into a linked list.
	  Add declaration for searching for a path in the cache.

2016-06-02  SilverNexus
	* fileperuser_search.c: Reduce the math required to return a value in fileperuser_memmem_boyer().
	* search.c: Increase severity of short read on non-mmap file load to ERROR and bail on that file.
	  Alter detection of next line in single match to use memchr().
	* main.c: Move search string length check up to reduce unnecessary processing when no search
	  string is supplied.
	* load_binary_file_cache.c: Begin to implement a binary file list that persists between executions.

2016-06-01  SilverNexus
	* parseArgs.c: Add arguments -b and --binary to toggle searching binary
	  files.
	* settings.h: Define search flag for binary files.
	* search.c: Add Functionality to test for binary files.
	  Optimize line counting to use memchr() instead of strchr().
	  Conditionally compile mmap file end fix only when we have mmap().
	  Move old check for null termination into new binary file detection;
	  optimize its new placement.